# par_textual_playground

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github-disabled/ISSUE_TEMPLATE/: bug_report.md
.github-disabled/workflows/: build.yml  publish-dev.yml  publish.yml  release.yml
src/par_textual_playground/: __init__.py  __main__.py  ai_msg.md  app.py  app.tcss  fence.md  story.md
src/par_textual_playground/widgets/: par_markdown.py  par_text_area.py
src/par_textual_playground/widgets/canvas/: __init__.py  canvs_test.py  hires.py  par_canvas.py
